--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+jwt.secret=javainuse
 spring.datasource.url=jdbc:postgresql://localhost:5433/db_201920z_va_prj_sports_sales
 
 spring.datasource.username=db_201920z_va_prj_sports_sales_owner
