--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 jwt.secret=javainuse
-spring.datasource.url=jdbc:postgresql://localhost:5433/db_201920z_va_prj_sports_sales
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 
-spring.datasource.username=db_201920z_va_prj_sports_sales_owner
-spring.datasource.password=sports_sales
+spring.datasource.username=postgres
+spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.default_schema = project
+spring.jpa.properties.hibernate.default_schema = web_project
 
 spring.jpa.show-sql=true
 
